# geo-uri-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  renovate.json
.forgejo/workflows/: audit.yml  release.yml
.gitea/workflows/: cargo.yml  release.yml
src/: lib.rs
