[package]
edition = "2021"
name = "geo-uri"
version = "0.1.1"
authors = ["Paul van Tilburg <paul@luon.net>"]
description = "A crate for parsing and generating uniform resource identifiers for geographic locations (geo URIs)"
repository = "https://git.luon.net/paul/geo-uri-rs"
readme = "README.md"
license = "MIT"
keywords = ["geolocation", "uri", "parser", "rfc5870"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
url = ["dep:url"]

[dependencies]
derive_builder = "0.11.2"
thiserror = "1.0.35"
url = { version = "2.3.1", optional = true }

[dev-dependencies]
float_eq = "1.0.0"
