[package]
name = "geo-uri"
version = "0.2.4"
authors = ["Paul van Tilburg <paul@luon.net>"]
edition = "2021"
rust-version = "1.60.0"
description = "A crate for parsing and generating uniform resource identifiers for geographic locations (geo URIs)"
readme = "README.md"
repository = "https://git.luon.net/paul/geo-uri-rs"
license = "MIT"
keywords = ["geolocation", "uri", "parser", "rfc5870"]
categories = ["parser-implementations", "web-programming", "encoding"]
include = ["CHANGELOG.md", "LICENSE", "README.md", "src/*.rs"]

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
url = ["dep:url"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.145", optional = true }
thiserror = "2.0.0"
url = { version = "2.3.1", optional = true }

[dev-dependencies]
serde_test = "1.0.145"
